--- a/detail/LONY&JOW/index.html
+++ b/detail/LONY&JOW/index.html
@@ -9,45 +9,41 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div id="header">
-			<nav>
-				<div id="nav-drawer">
-   					<input id="nav-input" type="checkbox" class="nav-unshown">
-      				<label id="nav-open" for="nav-input"><span></span></label>
-      				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
- 		    		<div id="nav-content">
- 		    			<p><a href="../../index.html#works-container">Works</a></p>
- 		    			<p><a href="../../index.html#skill-container">Skill</a></p>
- 		    			<p><a href="../../index.html#profile-container">Profile</a></p>
- 		    		</div>
-  				</div>
-			</nav>	
-		</div>
+	<header id="header">
+		<nav>
+			<div id="nav-drawer">
+				<input id="nav-input" type="checkbox" class="nav-unshown">
+  				<label id="nav-open" for="nav-input"><span></span></label>
+  				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
+		    	<div id="nav-content">
+		    		<p><a href="../../index.html#works-container">Works</a></p>
+		    		<p><a href="../../index.html#skill-container">Skill</a></p>
+		    		<p><a href="../../index.html#profile-container">Profile</a></p>
+		    	</div>
+			</div>
+		</nav>	
 	</header>
-	<main>
-		<div class="main">
-			<div class="scrol">
-				<div class="scrol_inner">
-					<h1>Works</h1>
-					<p><img src="../img/desktop_LONY&JOW.png" class="desktop"></p>
-					<img src="../img/LONY&JOW-page.jpg" class="full_img" alt="">
-					<h2>LONY&JOW</h2>
-					<dl>
-						<dd>HTML5/CSS3/Java Script/Photoshop/Illustrator</dd>
-						<dt><制作テーマ></dt><dd>架空レストラン</dd>
-						<dt><制作期間></dt><dd>3週間</dd>
-						<dt><コンセプト></dt><dd><span class="css-br">なんども訪れたくなる落ち着きのある</span>レストランをコンセプトとしました。<br>ターゲットは若い人もそうですが大人の人をメインとし<br>
-						それに合わせたサイトを制作しました。</dd>
-						<dt><コーディング></dt><dd>コーディングで落ち着いた<span class="css-br">雰囲気を出すために<br></span>それぞれのトピックをtransformを使い<br>横からゆっくりスライドして表れるようにしました。</dd>
-						<p><a href="../../LONY&JOW/index.html">UPL : https://mikiya4080.github.io/portfolio/detail/LONY&JOW/index.html</a></p>
-					</dl>
-				</div>
+	<main class="main">
+		<div class="scrol">
+			<div class="scrol_inner">
+				<h1>Works</h1>
+				<p><img src="../img/desktop_LONY&JOW.png" class="desktop"></p>
+				<img src="../img/LONY&JOW-page.jpg" class="full_img" alt="">
+				<h2>LONY&JOW</h2>
+				<dl>
+					<dd>HTML5/CSS3/Java Script/Photoshop/Illustrator</dd>
+					<dt><制作テーマ></dt><dd>架空レストラン</dd>
+					<dt><制作期間></dt><dd>3週間</dd>
+					<dt><コンセプト></dt><dd><span class="css-br">なんども訪れたくなる落ち着きのある</span>レストランをコンセプトとしました。<br>ターゲットは若い人もそうですが大人の人をメインとし<br>
+					それに合わせたサイトを制作しました。</dd>
+					<dt><コーディング></dt><dd>コーディングで落ち着いた<span class="css-br">雰囲気を出すために<br></span>それぞれのトピックをtransformを使い<br>横からゆっくりスライドして表れるようにしました。</dd>
+					<p><a href="../../LONY&JOW/index.html">UPL : https://mikiya4080.github.io/portfolio/detail/LONY&JOW/index.html</a></p>
+				</dl>
 			</div>
 		</div>
-		<footer id="footer">
-			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
-		</footer>		
-	</main>
+	</main>		
+	<footer id="footer">
+		<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
+	</footer>		
 </body>
 </html>
