--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Kambara Portfolio">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Kambara Portfolio | ベージュ色をベースにしたデザインで2020年のトレンドと考えられる流動シェイプや淡いドロップシャドウと角丸デザインを取り入れました。">
 	<title>kambara Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
