--- a/JAMAIS_FINI_LE_TEMPS/index.html
+++ b/JAMAIS_FINI_LE_TEMPS/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="24時間365日営業しているレストラン。そこには終わらない時間があり、くつろぎのひとときを。">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="JAMAIS FINI LI TEMPS | 24時間365日営業しているレストラン。そこには終わらない時間があり、くつろぎのひとときを。">
 	<title>JAMAIS FINI LE TEMPS | 24時間365日 営業レストラン</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 	<link rel="stylesheet" type="text/css" href="https://unpkg.com/ress/dist/ress.min.css">
