--- a/LONY&JOW/index.html
+++ b/LONY&JOW/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="LONY&JOW | 落ち着いた雰囲気のレストラン">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="LONY&JOW | 白を基調とし落ち着いた雰囲気のレストラン">
 	<title>LONY&JOW | 落ち着いた雰囲気のレストラン </title>
 	<link rel="stylesheet" type="text/css" href="https://unpkg.com/ress/dist/ress.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
