--- a/detail/AUTOSYSTEM/index.html
+++ b/detail/AUTOSYSTEM/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta  charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="AUTOSYSTEM | Twitter APIを用いていいね・リツイート・フォローの自動化システム">
 	<title>cafe studio詳細ページ</title>
 	<link rel="stylesheet" type="text/css" href="../css/main.css" />
 	<link rel="stylesheet" type="text/css" href="../css/reset.css" />
