--- a/detail/LONY&JOW/index.html
+++ b/detail/LONY&JOW/index.html
@@ -28,7 +28,7 @@
 			<div class="scrol_inner">
 				<h1>Works</h1>
 				<p><img src="../img/desktop_LONY&JOW.png" class="desktop"></p>
-				<img src="../img/LONY&JOW-page.jpg" class="full_img" alt="">
+				<img src="../img/LONY&JOW-page.png" class="full_img" alt="">
 				<h2>LONY&JOW</h2>
 				<dl>
 					<dd>HTML5/CSS3/Java Script/Photoshop/Illustrator</dd>
