--- a/LONY&JOW/index.html
+++ b/LONY&JOW/index.html
@@ -26,8 +26,8 @@
 				</a>
 				<h1 class="title01">WELCOME TO L<span class="title-Span">ONY&JOW</span></h1>
 				<h1 class="title02">UNIQUE AND D<span class="title-Span">ERCIOUS FOOD</span></h1>
-				<img src="img/restaurant.jpg" class="pc right_img" alt="">
-				<img src="img/restaurant-copy.jpg" class="sp" alt="">
+				<img src="img/restaurant.jpg" class="pc right_img" alt="PCトップ画像">
+				<img src="img/restaurant-copy.jpg" class="sp" alt="スマートフォントップ画像">
 				<h2>また来たくなるレストラン、<span class="css-br">そんな場所でありたい</span><br>
 				料理で「笑顔」を作る、<span class="css-br">そんな時間をご提供いたします</span></h2>
 			</div>
@@ -48,8 +48,8 @@
 					</div>
 				</div>	
 				<div class="anime">
-					<img src="img/background.png" class="pc" alt="">
-					<img src="img/restaurant2.jpg" class="Concept-img" alt="">
+					<img src="img/background.png" class="pc" alt="背景画像">
+					<img src="img/restaurant2.jpg" class="Concept-img" alt="コンセプト画像">
 				</div>	
 			</div>
 			<div id="Menu-container">
@@ -57,11 +57,11 @@
 				<p>生命力に満ちた旬の野菜を使って<br>「美味しくて体にやさしい」を追求<br>皆様に数々の季節限定料理を。</p>
 				<div class="Menu-container-inner">
 					<div class="anime-left pc">
-						<img src="img/menue06-img.png" alt="">
+						<img src="img/menue06-img.png" alt="PCメニュー一画像">
 					</div>
 					<div class="anime-right">
-						<img src="img/menue05-img.png" class="pc" alt="">
-						<img src="img/menu02-img.png" class="sp" alt="">
+						<img src="img/menue05-img.png" class="pc" alt="PCメニュー画像">
+						<img src="img/menu02-img.png" class="sp" alt="スマートフォンメニュー画像">
 					</div>
 				</div>
 				<a href="#" class="more-button">more</a>
@@ -75,8 +75,8 @@
 					<a href="" class="more-button">more</a>
 				</div>
 				<div class="Accessanime">
-					<img src="img/background.png" class="pc" alt="">
-					<img src="img/restaurant-image.jpg" class="Access-img" alt="">	
+					<img src="img/background.png" class="pc" alt="背景画像">
+					<img src="img/restaurant-image.jpg" class="Access-img" alt="アクセス画像">	
 				</div>	
 			</div>
 		</main>
