--- a/LONY&JOW/index.html
+++ b/LONY&JOW/index.html
@@ -80,32 +80,30 @@
 				</div>	
 			</div>
 		</main>
-		<footer>
-			<div id="footer">
-				<div class="footer-inner">
-					<div class="footer-info">
-						<div class="head">メールアドレス</div>
-						<div class="body">Lony.jowrest@scd-u.jp</div>
-						<div class="head">電話番号</div>
-						<div class="body">02-2331-2331</div>
-						<div class="head">営業時間</div>
-						<div class="body">10:00~22:00</div>
-						<div class="head">定休日</div>
-						<div class="body">水曜日 (4月~12月) 火曜日・水曜日(1月~3月)<br>季節により変更等ございますので詳細は営業日カレンダーをご確認ください。</div>
-					</div>
-					<ul class="menu pc">
-						<li><a href="#Concept-container">Concept</a></li>
-						<li><a href="#Menu-container">Menu</a></li>
-						<li><a href="#Access-container">Access</a></li>
-						<li><a href="#footer">Informaton</a></li>
-					</ul>
-					<a href="#main" class="sp top-button">Topへ</a>
-					<a href="#" class="ikon pc">
-						<img src="img/facebook-ikkon.png">
-						<img src="img/instagram-ikon.png">
-						<img src="img/twitter-ikon.jpg">
-					</a>
+		<footer id="footer">
+			<div class="footer-inner">
+				<div class="footer-info">
+					<div class="head">メールアドレス</div>
+					<div class="body">Lony.jowrest@scd-u.jp</div>
+					<div class="head">電話番号</div>
+					<div class="body">02-2331-2331</div>
+					<div class="head">営業時間</div>
+					<div class="body">10:00~22:00</div>
+					<div class="head">定休日</div>
+					<div class="body">水曜日 (4月~12月) 火曜日・水曜日(1月~3月)<br>季節により変更等ございますので詳細は営業日カレンダーをご確認ください。</div>
 				</div>
+				<ul class="menu pc">
+					<li><a href="#Concept-container">Concept</a></li>
+					<li><a href="#Menu-container">Menu</a></li>
+					<li><a href="#Access-container">Access</a></li>
+					<li><a href="#footer">Informaton</a></li>
+				</ul>
+				<a href="#main" class="sp top-button">Topへ</a>
+				<a href="#" class="ikon pc">
+					<img src="img/facebook-ikkon.png">
+					<img src="img/instagram-ikon.png">
+					<img src="img/twitter-ikon.jpg">
+				</a>
 			</div>
 		</footer>
 	</div>
