--- a/LONY&JOW/index.html
+++ b/LONY&JOW/index.html
@@ -15,6 +15,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.inview.js"></script>
 	<script type="text/javascript" src="js/fluffy-img.js"></script>
+		<!-- User Heat Tag -->
+	<script type="text/javascript">
+	(function(add, cla){window['UserHeatTag']=cla;window[cla]=window[cla]||function(){(window[cla].q=window[cla].q||[]).push(arguments)},window[cla].l=1*new Date();var ul=document.createElement('script');var tag = document.getElementsByTagName('script')[0];ul.async=1;ul.src=add;tag.parentNode.insertBefore(ul,tag);})('//uh.nakanohito.jp/uhj2/uh.js', '_uhtracker');_uhtracker({id:'uhJRjZthIK'});
+	</script>
+	<!-- End User Heat Tag -->
 </head>
 <body>
 	<div id="wrap">
